package com.example;
/**
 * Interface for the Command design pattern.
 * Defines a common execution method for all game-related actions.
 */
public interface Command {
    /**
     * Executes the specific command logic.
     */
    void execute();
}
