package com.example;

public enum StoneColor {
    BLACK,
    WHITE,
    EMPTY,
}
